fix skills card text not showing on mobile

--- a/src/components/skills-card/skills-card.scss
+++ b/src/components/skills-card/skills-card.scss
@@ -33,10 +33,10 @@
 .skills-text {
     flex-direction: column;
     display: none;
-    opacity: 0;
 }
 
 .skills-card-container:hover {
+
     .skills-text {
         display: flex;
         opacity: 1;
